# trainsafe

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: dpo_example.py  probes_example.yaml  sft_example.py
tests/: cuda_colab_test.ipynb  test_cuda.py  test_echo.py  test_format.py  test_integration.py  test_integration_trl.py  test_language.py  test_length.py  test_probes.py  test_repetition.py  test_utils.py
trainsafe/: __init__.py  callback.py  probes.py  utils.py
trainsafe/checks/: __init__.py  echo.py  format.py  language.py  length.py  repetition.py
trainsafe/reporters/: __init__.py  terminal.py  wandb.py
